# primal_dual_ilqr

./: .gitignore  README.md  pyproject.toml
data/: Austin.json  BUILD  Nuerburgring.json  Suzuka.json  read_track_data.py  track_reconstruction.py
data/test/: BUILD  track_reconstruction_test.py
environment/: vehicle_env.py
environment/test/: vehicle_env_test.py
math_lib/: signed_distance.py
primal_dual_ilqr/: constrained_optimizers.py  dual_tvlqr.py  kkt_helpers.py  linalg_helpers.py  optimizers.py  primal_tvlqr.py
tests/: cartpole.py  kinematic_bicycle.py  kinematic_bicycle_ilqr_mpc.py  kinematic_bicycle_mpc.py  kinematic_bicycle_primal_dual_mpc.py  plot_utils.py  primal_dual_augmented_lagrangian_test.py  quadpendulum.py  refactored_primal_dual_aig_lag_test.py  simple_tests.py  single_track_bicycle_model.py  single_track_bicycle_model_test.py  speed_optimization_test.py  track_reconstruction_test.py  trajectory_generation_test.py  trajectory_generation_time_test.py
trajectory_optimization/: path_speed_trajectory_generation.py
